force-app/main/default/objects/msf_payment_profile_h__x/msf_payment_profile_h__x.object-meta.xml
<CustomObject>
    <description>msf_payment_profile_h</description>
    <externalDataSource>AWS</externalDataSource>
    <externalName>msf_payment_profile_h</externalName>
    <label>msf_payment_profile_h</label>
    <pluralLabel>msf_payment_profile_h</pluralLabel>
</CustomObject>