force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_active_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cpm__active__c</description>
    <externalDeveloperName>cpm__active__c</externalDeveloperName>
    <label>cpm__active__c</label>
    <type>Checkbox</type>
</CustomField>