force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_contact_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_contact_c__c</fullName>
    <description>cpm__contact__c</description>
    <externalDeveloperName>cpm__contact__c</externalDeveloperName>
    <label>cpm__contact__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>