force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_expiration_year_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_expiration_year_c__c</fullName>
    <description>cpm__expiration_year__c</description>
    <externalDeveloperName>cpm__expiration_year__c</externalDeveloperName>
    <label>cpm__expiration_year__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>