force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_holder_name_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_holder_name_c__c</fullName>
    <description>cpm__holder_name__c</description>
    <externalDeveloperName>cpm__holder_name__c</externalDeveloperName>
    <label>cpm__holder_name__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>