force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_iban_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_iban_c__c</fullName>
    <description>cpm__iban__c</description>
    <externalDeveloperName>cpm__iban__c</externalDeveloperName>
    <label>cpm__iban__c</label>
    <length>35</length>
    <type>Text</type>
</CustomField>