force-app/main/default/objects/msf_payment_profile_h__x/fields/cpm_token_issuer_c__c.field-meta.xml
<CustomField>
    <fullName>cpm_token_issuer_c__c</fullName>
    <description>cpm__token_issuer__c</description>
    <externalDeveloperName>cpm__token_issuer__c</externalDeveloperName>
    <label>cpm__token_issuer__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>