force-app/main/default/objects/msf_payment_profile_h__x/fields/msf_crmexternalid_c__c.field-meta.xml
<CustomField>
    <fullName>msf_crmexternalid_c__c</fullName>
    <description>msf_crmexternalid__c</description>
    <externalDeveloperName>msf_crmexternalid__c</externalDeveloperName>
    <label>msf_crmexternalid__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>